| Summary: | ASTERISK-27289: A codeblock that maintains a bug,but maybe the codeblock will never run | ||
| Reporter: | Huangyx (TiHuang) | Labels: | |
| Date Opened: | 2017-09-22 21:50:10 | Date Closed: | 2017-09-26 06:36:48 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/General |
| Versions: | 15.0.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | fedora26 kernel:4.11.9-300 | Attachments: | |
| Description: | CODE:
{noformat} #else int jump = calc_monitor_jump((ast_channel_outsmpl(chan) - ast_channel_insmpl(chan)), ast_format_get_sample_rate(f->subclass.codec), ast_format_get_sample_rate(ast_channel_monitor(chan)->read_stream->fmt->format)); if (jump - MONITOR_DELAY >= 0) { if (ast_seekstream(ast_channel_monitor(chan)->read_stream, jump - f->samples, SEEK_FORCECUR) == -1) { ast_log(LOG_WARNING, "Failed to perform seek in monitoring read stream, synchronization between the files may be broken\n"); } ast_channel_insmpl(chan) += ast_channel_outsmpl(chan) - ast_channel_insmpl(chan); } else { ast_channel_insmpl(chan) += f->samples; } {noformat} DESCRIPTION: The function ast_format_get_sample_rate's parameter should have been a format,but the code shows a codec. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-22 21:50:12.241-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2017-09-25 11:00:06.024-0500 That code is not compiled in. If it were it would cause a compiler error. By: Friendly Automation (friendly-automation) 2017-09-26 06:36:49.414-0500 Change 6591 merged by Jenkins2: channel.c: Fix invalid reference in conditionaled out code. [https://gerrit.asterisk.org/6591|https://gerrit.asterisk.org/6591] By: Friendly Automation (friendly-automation) 2017-09-26 06:49:37.188-0500 Change 6590 merged by Jenkins2: channel.c: Fix invalid reference in conditionaled out code. [https://gerrit.asterisk.org/6590|https://gerrit.asterisk.org/6590] By: Friendly Automation (friendly-automation) 2017-09-26 07:08:24.269-0500 Change 6588 merged by Joshua Colp: channel.c: Fix invalid reference in conditionaled out code. [https://gerrit.asterisk.org/6588|https://gerrit.asterisk.org/6588] By: Friendly Automation (friendly-automation) 2017-09-26 07:31:18.112-0500 Change 6589 merged by Joshua Colp: channel.c: Fix invalid reference in conditionaled out code. [https://gerrit.asterisk.org/6589|https://gerrit.asterisk.org/6589] | ||