channel.c: Fix invalid reference in conditionaled out code.

ASTERISK-27289

Change-Id: I7a415948116493050614d9f4fa91ffbe0c21ec4c