main/channel.c
@@ -4293,7 +4293,7 @@ static struct ast_frame *__ast_read(struct ast_channel *chan, int dropaudio)
 				}
 #else
 				int jump = calc_monitor_jump((ast_channel_outsmpl(chan) - ast_channel_insmpl(chan)),
-					ast_format_get_sample_rate(f->subclass.codec),
+					ast_format_get_sample_rate(f->subclass.format),
 					ast_format_get_sample_rate(ast_channel_monitor(chan)->read_stream->fmt->format));
 				if (jump - MONITOR_DELAY >= 0) {
 					if (ast_seekstream(ast_channel_monitor(chan)->read_stream, jump - f->samples, SEEK_FORCECUR) == -1) {
@@ -5375,7 +5375,7 @@ int ast_write(struct ast_channel *chan, struct ast_frame *fr)
 				}
 #else
 				int jump = calc_monitor_jump((ast_channel_insmpl(chan) - ast_channel_outsmpl(chan)),
-				                             ast_format_get_sample_rate(f->subclass.codec),
+				                             ast_format_get_sample_rate(f->subclass.format),
 				                             ast_format_get_sample_rate(ast_channel_monitor(chan)->read_stream->fmt->format));
 				if (jump - MONITOR_DELAY >= 0) {
 					if (ast_seekstream(ast_channel_monitor(chan)->write_stream, jump - cur->samples, SEEK_FORCECUR) == -1) {
